// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - redeem osToken calculates redeem correctly 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 129040,
}
`;

exports[`EthVault - redeem osToken calls action hook 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 133918,
}
`;

exports[`EthVault - redeem osToken can redeem 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 129040,
}
`;
